examples/test/testpolicy2651.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2651
  namespace: namespace284
spec:
  podSelector:
    matchLabels:
      key49: value30
      key31: value48
      key45: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value23
          key18: value48
          key19: value21
      podSelector:
        matchLabels:
          key43: value48
          key21: value23
          key22: value8
